# spell-sync

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  RECOVERY.md
scripts/: check-docs-style.sh  ci.sh
spell_sync/: __init__.py  __main__.py  app_process_check.py  bundled_files.py  cli.py  cli_options.py  command_helpers.py  commands.py  config.py  config_check_cmd.py  dictionaries.py  dictionary_hints.py  dictionary_registry.py  doctor.py  exit_codes.py  io.py  journal_schema.py  json_output.py  lint.py  log.py  neovim_mkspell.py  operation_lock.py  paths.py  plan_cmd.py  project.py  push_abort.py  push_journal.py  push_plan.py  push_prepared.py  push_render.py  push_setup.py  push_transaction.py  read_outcome.py  recover_cmd.py  removal_review.py  runtime.py  settings.py  skip_reasons.py  subprocess_utils.py  sync_context.py  (+5 more)
tests/: conftest.py  journal_test_utils.py  test_app_process_check.py  test_app_process_guard.py  test_cli.py  test_cli_clarity.py  test_command_helpers.py  test_commands.py  test_core.py  test_dictionaries.py  test_doctor.py  test_dry_run.py  test_edge_cases.py  test_gui_smoke.py  test_interactions.py  test_invariants.py  test_json_contract.py  test_json_output.py  test_limitations.py  test_lint.py  test_naming.py  test_neovim_mkspell.py  test_obsidian_hunspell.py  test_operation_lock.py  test_paths.py  test_project_context.py  test_push_journal.py  test_push_safety_coverage.py  test_push_safety_edges.py  test_push_skip_json.py  test_push_transaction.py  test_read_outcome.py  test_resilience.py  test_review_cmd.py  test_risk_mitigations.py  (+10 more)
(+16 files in other folders)
